--- a/honpen.css
+++ b/honpen.css
@@ -30,6 +30,19 @@ main {
     text-stroke: 2px #FFF;
 }
 
+#tap-to-start {
+    width: 100%;
+    height: 100%;
+    background-color: rgb(204, 167, 0);
+    font-family: sans-serif;
+    font-size: 72px;
+    font-weight: 900;
+    text-align: center;
+    margin: auto;
+    -webkit-text-stroke: 2px #FFF;
+    text-stroke: 2px #FFF;
+}
+
 footer {
     height: 10%;
     width: 100%;
